--- a/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
+++ b/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
@@ -57,11 +57,16 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net40\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="Tracy.Frameworks.Common">
       <HintPath>..\..\..\DLL\Tracy.Frameworks.Common.dll</HintPath>
     </Reference>
@@ -82,6 +87,7 @@
     <Compile Include="CodeGenerate\Csla\ReadOnlyListClassGenerator.cs" />
     <Compile Include="CodeGenerate\Csla\ReadOnlyClassGenerator.cs" />
     <Compile Include="Common\CodeBuilderHelper.cs" />
+    <Compile Include="Common\ConfigHelper.cs" />
     <Compile Include="Common\DapperHelper.cs" />
     <Compile Include="Config\ConfigInfo.cs" />
     <Compile Include="Config\ConfigManager.cs" />
@@ -261,6 +267,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
