--- a/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
+++ b/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
@@ -183,6 +183,12 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmMainNew.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMainNew.Designer.cs">
+      <DependentUpon>FrmMainNew.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmQueryData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +256,9 @@
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMainNew.resx">
+      <DependentUpon>FrmMainNew.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmQueryData.resx">
       <DependentUpon>FrmQueryData.cs</DependentUpon>
