--- a/DEV/CodeBuilder/CodeBuilder/app.config
+++ b/DEV/CodeBuilder/CodeBuilder/app.config
@@ -1,3 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+  <appSettings>
+    <add key="POCOEntityTemplate" value="Template\POCOEntityTemplate.tt"/>
+    <add key="DALTemplate" value="Template\DALTemplate.tt"/>
+    <add key="ServiceTemplate" value="Template\ServiceTemplate.tt"/>
+  </appSettings>
+  
+</configuration>
