--- a/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
+++ b/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
@@ -60,6 +60,13 @@
     <Reference Include="Dapper">
       <HintPath>..\packages\Dapper.1.50.2\lib\net40\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.TextTemplating.10.0">
+      <HintPath>..\..\..\DLL\Microsoft.VisualStudio.TextTemplating.10.0.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualStudio.TextTemplating.Interfaces.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\DLL\Microsoft.VisualStudio.TextTemplating.Interfaces.10.0.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -195,7 +202,18 @@
     <Compile Include="FrmQueryData.Designer.cs">
       <DependentUpon>FrmQueryData.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSingleTableGenerate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSingleTableGenerate.Designer.cs">
+      <DependentUpon>FrmSingleTableGenerate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Common\Enums.cs" />
+    <Compile Include="Model\Domain\CreateCodeRequest.cs" />
     <Compile Include="Model\Sys\TSysInfoSchemaTable.cs" />
+    <Compile Include="Model\Template\CustomTextTemplatingEngineHost.cs" />
+    <Compile Include="Model\Template\EntityClassInfo.cs" />
+    <Compile Include="Model\Template\EntityClassPropertyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CommonService.cs" />
@@ -263,6 +281,9 @@
     <EmbeddedResource Include="FrmQueryData.resx">
       <DependentUpon>FrmQueryData.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSingleTableGenerate.resx">
+      <DependentUpon>FrmSingleTableGenerate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
