--- a/DEV/CodeBuilder/CodeBuilder/app.config
+++ b/DEV/CodeBuilder/CodeBuilder/app.config
@@ -5,6 +5,7 @@
   </startup>
   <appSettings>
     <add key="POCOEntityTemplate" value="Template\POCOEntityTemplate.tt"/>
+    <add key="DOEntityTemplate" value="Template\DOEntityTemplate.tt"/>
     <add key="DALTemplate" value="Template\DALTemplate.tt"/>
     <add key="ServiceTemplate" value="Template\ServiceTemplate.tt"/>
   </appSettings>
