--- a/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
+++ b/DEV/CodeBuilder/CodeBuilder/CodeBuilder.csproj
@@ -67,6 +67,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\DLL\Microsoft.VisualStudio.TextTemplating.Interfaces.10.0.dll</HintPath>
     </Reference>
+    <Reference Include="SSharing.Frameworks.Common">
+      <HintPath>..\..\..\DLL\SSharing.Frameworks.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -74,9 +77,6 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Tracy.Frameworks.Common">
-      <HintPath>..\..\..\DLL\Tracy.Frameworks.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinarySerializer.cs" />
